<resources>
    <string name="app_name">Views</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">sobrenome</string>
    <string name="email">email</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <array name="estadoCivil">
        <item>Solteiro(a)</item>
        <item>Casado(a)</item>
        <item>Divorciado(a)</item>
    </array>
</resources>