<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="Preencha seus dados"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/nome"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etSobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sobrenome"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spEstadoCivil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:tooltipText="Estado civil"
        android:entries="@array/estadoCivil"
        />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minHeight="48dp"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/rbFem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/feminino"
            />

        <RadioButton
            android:id="@+id/rbMasc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:layout_weight="1"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btLimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:minHeight="48dp"/>


</LinearLayout>